# nonebot_plugin_lazytea

./: README.md  pyproject.toml
nonebot_plugin_lazytea/: __init__.py  bridge.py  sdk.py
nonebot_plugin_lazytea/ipc/: __init__.py  envhandler.py  func_call.py  models.py  server.py
nonebot_plugin_lazytea/ui/: main_window.py  protocol.py  sdk.py
nonebot_plugin_lazytea/ui/pages/: __init__.py  base_page.py  bot_info_page.py  message_page.py  overview_page.py  plugin_page.py  settings_page.py
nonebot_plugin_lazytea/ui/pages/Bubble/: MessageBubble.py
nonebot_plugin_lazytea/ui/pages/background/: plugin_recorder.py  quit.py  start.py
nonebot_plugin_lazytea/ui/pages/utils/: client.py  env.py  plugin_html.py  tealog.py  token.py  version_check.py
nonebot_plugin_lazytea/ui/pages/utils/BotTools/: color.py  counter.py  timer.py
nonebot_plugin_lazytea/ui/pages/utils/Qcomponents/: light_http.py  networkmanager.py  nonwheel.py
nonebot_plugin_lazytea/ui/pages/utils/client_login/: config_manager.py  login_ui.py
nonebot_plugin_lazytea/utils/: commute.py  config.py  parse.py
nonebot_plugin_lazytea/utils/roster/: __init__.py  model.py  teller.py
nonebot_plugin_noobui/: __init__.py  bridge.py
nonebot_plugin_noobui/ipc/: func_call.py  server.py
nonebot_plugin_noobui/ui/: main_window.py  protocol.py
nonebot_plugin_noobui/ui/pages/: __init__.py  base_page.py  bot_info_page.py  message_page.py  overview_page.py  plugin_page.py  settings_page.py
nonebot_plugin_noobui/ui/pages/Bubble/: MessageBubble.py
nonebot_plugin_noobui/ui/pages/utils/: client.py
(+18 files in other folders)
